0.5.1/_sources/gallery/surface_normals_wireframe.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/surface_normals_wireframe.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_surface_normals_wireframe.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_surface_normals_wireframe.py:


Surface normals wireframe
=========================

Display a 3D mesh with normals and wireframe

.. tags:: experimental

.. GENERATED FROM PYTHON SOURCE LINES 9-30



.. image-sg:: /gallery/images/sphx_glr_surface_normals_wireframe_001.png
   :alt: surface normals wireframe
   :srcset: /gallery/images/sphx_glr_surface_normals_wireframe_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading data from https://raw.githubusercontent.com/vispy/demo-data/main/orig/triceratops.obj.gz (141 kB)
    [..................                      ] 45.52059 | downloading       [....................................    ] 91.04119 / downloading       [........................................] 100.00000 - downloading   
    File saved as /home/runner/.vispy/data/orig/triceratops.obj.gz.






|

.. code-block:: Python


    from vispy.io import load_data_file, read_mesh

    import napari

    vert, faces, _, _ = read_mesh(load_data_file('orig/triceratops.obj.gz'))

    # put the mesh right side up, scale it up (napari#3477) and fix faces handedness
    vert *= -100
    faces = faces[:, ::-1]

    viewer = napari.Viewer(ndisplay=3)
    surface = viewer.add_surface(data=(vert, faces))

    # enable normals and wireframe
    surface.normals.face.visible = True
    surface.normals.vertex.visible = True
    surface.wireframe.visible = True

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_surface_normals_wireframe.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: surface_normals_wireframe.ipynb <surface_normals_wireframe.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: surface_normals_wireframe.py <surface_normals_wireframe.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: surface_normals_wireframe.zip <surface_normals_wireframe.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
